--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <img src="assets/images/logo.svg" alt="HimaIndonesia" />
         </a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler text-white-50"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
@@ -91,11 +91,8 @@
     <div class="position-relative">
       <div class="container">
         <div class="row">
-          <div class="col-6">
-            <div class="mt-5 position-absolute">
-              <br />
-              <br />
-              <br />
+          <div class="col-md-6">
+            <div class="mt-md-6 position-absolute">
               <h1 class="font-bold h1">
                 <span class="text-danger">Welcome</span>
                 to
@@ -104,18 +101,20 @@
               <h1 class="font-bold">
                 HIMA <span class="text-danger">INDONESIA</span>
               </h1>
-              <div
-                class="
-                  btn btn-primary
-                  rounded-pill
-                  text-white
-                  font-medium
-                  px-4
-                  bg-darkblue
-                "
-              >
-                Get Started
-              </div>
+              <a href="#scrool">
+                <div
+                  class="
+                    btn btn-primary
+                    rounded-pill
+                    text-white
+                    font-medium
+                    px-4
+                    bg-darkblue
+                  "
+                >
+                  Get Started
+                </div>
+              </a>
             </div>
           </div>
         </div>
@@ -124,41 +123,277 @@
     </div>
 
     <!--Carousel -->
-    <div class="pt-5 bg-birumuda">
-      <div class="owl-carousel owl-theme">
-        <div class="item">
-          <img
-            src="assets/images/Poster1.png"
-            class="img-fluid rounded-4"
-            alt="..."
-          />
-        </div>
-        <div class="item">
-          <img
-            src="assets/images/Poster2.png"
-            class="img-fluid rounded-4"
-            alt="..."
-          />
-        </div>
-        <div class="item">
-          <img
-            src="assets/images/Poster3.png"
-            class="img-fluid rounded-4"
-            alt="..."
-          />
+    <div class="hidden">
+      <div class="pt-5 bg-birumuda">
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <img
+              src="assets/images/Poster1.png"
+              class="img-fluid rounded-4"
+              alt="..."
+            />
+          </div>
+          <div class="item">
+            <img
+              src="assets/images/Poster2.png"
+              class="img-fluid rounded-4"
+              alt="..."
+            />
+          </div>
+          <div class="item">
+            <img
+              src="assets/images/Poster3.png"
+              class="img-fluid rounded-4"
+              alt="..."
+            />
+          </div>
         </div>
       </div>
     </div>
 
-    <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!--Latest News-->
+    <div class="bg-latestNews mt-5 mb-5" id="scrool">
+      <div class="container">
+        <div class="row">
+          <div class="col-5">
+            <h1 class="font-bold mb-3">Latest News</h1>
+            <img src="assets/images/HotNews.png" alt="" class="img-fluid" />
+          </div>
+
+          <div class="col-sm-12 col-md-6 pt-6 ps-md-5">
+            <div class="row mb-4">
+              <div class="col-md-5 img-fluid">
+                <div class="position-relative">
+                  <img
+                    style="z-index: 1"
+                    src="assets/images/news1.png"
+                    alt=""
+                  />
+                  <a
+                    href=""
+                    class="
+                      font-thin
+                      position-absolute
+                      text-white text-decoration-none
+                      ms-3
+                      mb-3
+                    "
+                    style="z-index: 2; bottom: 0px"
+                  >
+                    Visual Studio Code
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="row mb-4">
+              <div class="col-md-3"></div>
+              <div class="col-md-5 img-fluid ms-sm-0 ms-md-5 ps-sm-0 ps-md-6">
+                <div class="position-relative">
+                  <img
+                    style="z-index: 1"
+                    src="assets/images/news2.png"
+                    alt=""
+                  />
+                  <a
+                    href=""
+                    class="
+                      font-thin
+                      position-absolute
+                      text-white text-decoration-none
+                      ms-3
+                      mb-3
+                    "
+                    style="z-index: 2; bottom: 0px"
+                  >
+                    Coding is my life
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-5 img-fluid">
+                  <img
+                    style="z-index: 1"
+                    src="assets/images/news3.png"
+                    alt=""
+                  />
+                  <a
+                    href=""
+                    class="
+                      font-th
+                      text-white text-decoration-none
+                      ms-3
+                      mb-3
+                    "
+                    style="z-index: 2; bottom: 0px"
+                  >
+                    Revolusi Dunia
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--Upcoming Events-->
+    <div class="bg-birumuda">
+      <div class="container pt-4">
+        <h1 class="fw-bold mb-4">Upcoming Events</h1>
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <div class="card ms-none px-4 pt-4" style="width: 18rem">
+              <img
+                src="assets/images/Events1.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="mb-5 card-text text-center fw-bold">
+                  Webinar Nasional
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="card px-4 pt-4" style="width: 18rem">
+              <img
+                src="assets/images/Events2.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="mb-5 card-text text-center fw-bold">Swim Campaign</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="card px-4 pt-4" style="width: 18rem">
+              <img
+                src="assets/images/Events3.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="mb-5 card-text text-center fw-bold">
+                  Webinar Nasional
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--footer-->
+      <div class="bg-birumuda mt-5">
+        <img src="assets/images/Footer.png" class="img-fluid" alt="" />
+      </div>
+    </div>
+
+    <div class="bg-darkblue">
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+              <ul class="list-unstyled">
+                <li>
+                  <p class="font-thin text-white text-decoration-underline">
+                    <img class="me-3" src="assets/images/gmail.svg" alt="" />
+                    hima@gmail.com
+                  </p>
+                </li>
+                <li>
+                  <p class="font-thin text-white text-decoration-underline">
+                    <img
+                      class="me-3"
+                      src="assets/images/instagram.svg"
+                      alt=""
+                    />
+                    hima.indonesia
+                  </p>
+                </li>
+                <li>
+                  <p class="font-thin text-white text-decoration-underline">
+                    <img class="me-3" src="assets/images/youtube.svg" alt="" />
+                    hima.indonesia
+                  </p>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
+              <h2 class="text-white fs-5 fw-bold footer-heading">
+                Quick Links
+              </h2>
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#" class="font-thin text-white py-2 d-block">Home</a>
+                </li>
+                <li>
+                  <a href="#" class="font-thin text-white py-2 d-block"
+                    >Profile Organisasi</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="font-thin text-white py-2 d-block"
+                    >Artikel</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="font-thin text-white py-2 d-block"
+                    >Galery</a
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+              <h2 class="fw-bold text-white fs-5 footer-heading">Contact Us</h2>
+              <div class="block-23 mb-3">
+                <ul class="list-unstyled">
+                  <li>
+                    <a
+                      href="tel:+6281234456785"
+                      class="font-thin text-white py-2 d-block"
+                      >081234456785</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="font-thin text-white py-2 d-block"
+                      >Jl. Merdeka Selatan Surabaya</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-3 pd-2">
+          <div class="col-md-12 text-center">
+            <p class="font-medium text-white copyright">
+              Copyright &copy;
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              All rights reserved by HINUS TECH
+            </p>
+          </div>
+        </div>
+      </footer>
+    </div>
+
     <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.bundle.js"></script> -->
     <script src="js/owl.carousel.js"></script>
     <script>
       $(".owl-carousel").owlCarousel({
-        stagePadding: 300,
+        stagePadding: 385,
         loop: true,
-        margin: 40,
+        margin: 30,
         nav: false,
         responsive: {
           0: {
